--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+                <p class="event listening">Connecting to device</p>
+                <p class="event received">Device is ready</p>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
